--- a/src/accounts/templates/accounts/group_update.html
+++ b/src/accounts/templates/accounts/group_update.html
@@ -1,5 +1,6 @@
 {% extends 'qstockapp/base_admin.html' %}
 {% load static %}
+{% load template_permission %}
 
 {% block head %}
 <title>Administration</title>
@@ -43,7 +44,11 @@ input, select, textarea {
         </div>
     </div>
     <button type="submit">Enrégistrer</button>
+    {% if request.user|has_permission:"auth.delete_group" %}
     <a href="{% url 'accounts:group_delete' pk=group.pk %}" class="link danger">Supprimer ce groupe</a>
+    {% endif %}
+    {% if request.user|has_permission:"auth.view_group" %}
     <a class="link" href="{% url 'accounts:group_list' %}">Retour</a>
+    {% endif %}
 </form>
 {% endblock %}
