--- a/src/accounts/templates/accounts/user_update.html
+++ b/src/accounts/templates/accounts/user_update.html
@@ -1,5 +1,6 @@
 {% extends 'qstockapp/base_admin.html' %}
 {% load static %}
+{% load template_permission %}
 
 {% block head %}
 <title>Administration</title>
@@ -11,9 +12,6 @@
 select#id_user_permissions {
     min-height: 120px;
     resize: vertical;
-}
-input, select, textarea {
-    border: 1px solid #e1e1e1;
 }
 {% endblock %}
 
@@ -69,7 +67,9 @@ input, select, textarea {
         </div>
     </div>
     <button type="submit">Enrégistrer</button>
-    <a href="{% url 'accounts:user_delete' pk=user.pk %}" class="link danger">Supprimer ce utilisateur</a>
+    {% if request.user|has_permission:"accounts.can_delete_user" %}
+    <a href="{% url 'accounts:user_delete' pk=user_object.pk %}" class="link danger">Supprimer ce utilisateur</a>
+    {% endif %}
     <a class="link" href="{% url 'accounts:user_list' %}">Retour</a>
 </form>
 {% endblock %}
