Offline template edited

--- a/src/quickstockapp/templates/quickstockapp/offline.html
+++ b/src/quickstockapp/templates/quickstockapp/offline.html
@@ -27,12 +27,12 @@
         }
     </style>
     
-    <title>Pas d'internet</title>
+    <title>Connexion impossible</title>
 </head>
 <body>
     <div>
         <p>😥😥</p>
-        <h2>Vous n'êtes pas connecté à internet ! </h2>
+        <h2>Impossible de contacter le serveur.</h2>
         <button class="btn">Recharger la page</button>
     </div>
     <script>
