--- a/src/settings/templates/settings/update.html
+++ b/src/settings/templates/settings/update.html
@@ -23,17 +23,30 @@
         </div>
         <div>
             {{ form.company_logo.label }} :
-            {% if settings_object.company_logo %}
             <div>
-                <img src="{{ settings_object.company_logo.url }}" alt="Logo" id="logo_preview" height="70">
+                <img src="{% if settings_object.company_logo %}{{ settings_object.company_logo.url }}{% endif %}"
+                    style="display: {% if not settings_object.company_logo %} none {% endif %};" 
+                    alt="Logo" id="logo_preview" height="70">
             </div>
-            {% endif %}
             <label for="id_company_logo">
                 <span class="logo_change_btn">
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M3 21V16.75L16.2 3.575C16.4 3.39167 16.621 3.25 16.863 3.15C17.105 3.05 17.359 3 17.625 3C17.891 3 18.1493 3.05 18.4 3.15C18.6507 3.25 18.8673 3.4 19.05 3.6L20.425 5C20.625 5.18333 20.771 5.4 20.863 5.65C20.955 5.9 21.0007 6.15 21 6.4C21 6.66667 20.9543 6.921 20.863 7.163C20.7717 7.405 20.6257 7.62567 20.425 7.825L7.25 21H3ZM17.6 7.8L19 6.4L17.6 5L16.2 6.4L17.6 7.8Z" fill="black"/>
                     </svg>
                 </span>
+                {% if settings_object.company_logo %}
+                <span id="logo_delete_btn">
+                    <a href="{% url 'settings:delete_compagny_logo' %}" class="link danger">Supprimer</a>
+                </span>
+                <script>
+                    document.getElementById("logo_delete_btn").addEventListener("click", (e) => {
+                        e.preventDefault();
+                        if (confirm("Êtes-vous sûr de vouloir supprimer ?")) {
+                            window.location = "/settings/delete_compagny_logo/";
+                        }
+                    })
+                </script>
+                {% endif %}
                 <div id="company_logo_fields">
                     {{ form.company_logo }}
                 </div>
