--- a/src/orders/templates/orders/order_update.html
+++ b/src/orders/templates/orders/order_update.html
@@ -66,6 +66,10 @@
             {{ form.description.label_tag }}
             {{ form.description }}
         </div>
+        <div style="display: flex; gap: .3rem;">
+            <input type="checkbox" name="add_to_stock" id="add_to_stock" checked>
+            <label for="add_to_stock">Ajouter sur le stock</label>
+        </div>
     </div>
     <button type="submit">Modifier</button>
     <a class="link" href="{% url 'orders:order_details' pk=order.pk %}">Annuler</a>
