Period changed js delete; product list edited ; table.css edited ; current tab js edited ;

--- a/src/quickstockapp/static/css/quickstockapp/table.css
+++ b/src/quickstockapp/static/css/quickstockapp/table.css
@@ -39,6 +39,12 @@ tr.warn {
 .table-link {
     font-weight: 700;
 }
+.table-link.regular {
+    font-weight: 400;
+}
+.table-link.regular:hover {
+    text-decoration: underline;
+}
 .table-link:hover {
     color: var(--primary);
 }
